# vart_jax

./: .gitignore  README.md  main.py  pyproject.toml
src/vart_jax/: __init__.py  check_gpu.py  likelihood.py  main.py  model.py  reporting.py  simulation.py  storage.py  tree.py
tests/: test_cli.py  test_likelihood.py  test_svi_smoke.py  test_tree.py
