[project]
name = "vart-jax"
version = "0.1.0"
description = "Single-tree Variational Regression Trees in JAX and NumPyro"
readme = "README.md"
authors = [
    { name = "longxiu", email = "longxiu@umich.edu" }
]
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.5.3",
    "jax[cuda12]>=0.10.1",
    "matplotlib>=3.10.9",
    "numpyro>=0.21.0",
    "pandas>=3.0.3",
]

[project.scripts]
vart-jax = "vart_jax.main:main"
vart-sim = "vart_jax.main:main"

[build-system]
requires = ["uv_build>=0.10.4,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-s"
